<resources>
    <string name="app_name">WeatherApp</string>
    <string name="today_s_weather_forecast">Today\'s Weather Forecast</string>
    <string name="condition">Condition</string>
    <string name="_23">23</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="city_name">City Name</string>
    <string name="todo">TODO</string>
    <string name="_13">13</string>
</resources>