<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_centerInParent="true">
    </ProgressBar>
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/homeLayout"
       android:visibility="visible">
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:scaleType="centerCrop"
           android:src="@color/black_shade_1"
           android:id="@+id/backImage">
       </ImageView>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/city_name"
           android:textAlignment="center"
           android:gravity="center"
           android:textColor="@color/white"
           android:layout_marginTop="30dp"
           android:padding="20dp"
           android:textSize="20sp"
           android:id="@+id/cityName">
       </TextView>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:id="@+id/linearLayout"
           android:layout_below="@+id/cityName"
           android:weightSum="5"
           android:layout_marginTop="20dp">
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:layout_weight="4.5"
               android:background="@android:color/transparent"
               android:hint="@string/enter_city_name"
               android:padding="5dp"
               app:hintTextColor="@color/white"
               android:textColorHint="@color/white">
               <com.google.android.material.textfield.TextInputEditText
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/editText"
                   android:importantForAutofill="no"
                   android:inputType="text"
                   android:singleLine="true"
                   android:textColor="@color/white"
                   android:textSize="14sp"
                   android:background="@android:color/transparent">
               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>
           <ImageView
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.5"
               android:id="@+id/searchButton"
               android:layout_margin="10dp"
               android:layout_gravity="center"
               android:background="@android:color/transparent"
               android:src="@drawable/search_icon"
               app:tint="@color/white">
           </ImageView>
       </LinearLayout>
       <TextView
           android:id="@+id/textViewTemperature"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/linearLayout"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
           android:gravity="center_horizontal"
           android:padding="5dp"
           android:text="@string/_23"
           android:textColor="@color/white"
           android:textSize="70sp">
       </TextView>
       <ImageView
           android:id="@+id/showWeather"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@id/textViewTemperature"
           android:layout_centerHorizontal="true"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
           android:src="@mipmap/ic_launcher">
       </ImageView>
       <TextView
           android:id="@+id/textViewCondition"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_below="@id/showWeather"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="10dp"
           android:layout_marginBottom="10dp"
           android:gravity="center"
           android:text="@string/condition"
           android:textAlignment="center"
           android:textColor="@color/white">
       </TextView>
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="8dp"
               android:layout_marginBottom="10dp"
               android:text="@string/today_s_weather_forecast"
               android:textColor="@color/white"
               android:layout_above="@+id/recycler"
               android:textStyle="bold">
           </TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
            </androidx.recyclerview.widget.RecyclerView>
   </RelativeLayout>
</RelativeLayout>